# cacaobot

./: .env.example  .gitignore  AUTONOMOUS_SESSION.md  AUTONOMOUS_STATUS.md  AUTONOMOUS_SUMMARY.md  AUTO_MONITOR_LOOP.sh  CLAUDE.md  CLAUDE.md.backup  CODEX_FINAL_REVIEW.md  CODEX_READY.md  CODEX_REVIEW_REPORT.md  CODEX_TASKS_QUEUE.md  COMPILATION_STATUS.md  Cargo.toml  DEPLOY_CHECKLIST.md  DIAGNOSTIC_ANTIGRAVITY.md  Dockerfile  FINAL_STATUS_AUTONOMOUS.md  HANDOFF_TO_AMP.md  INTEGRATION_TESTS_REPORT.md  LLM_COMMUNICATION_REPORT_2026-02-03.md  LLM_PROMPT_SUBMISSION_REPORT_2026-02-03.md  NEXT_STEPS.md  ORCHESTRATION_ACTIVE_LOG.md  ORCHESTRATION_FINAL_TODO.md  ORCHESTRATION_LOG.md  ORCHESTRATION_PLAN_V3.md  ORCHESTRATION_STATUS.md  ORCHESTRATOR_ACTIVE_MODE.md  ORCHESTRATOR_AUTONOMOUS_SESSION.md  ORCHESTRATOR_AUTONOMOUS_V4.md  ORCHESTRATOR_AUTO_DISPATCH.md  ORCHESTRATOR_AUTO_MODE.md  ORCHESTRATOR_INFINITE_LOOP.sh  ORCHESTRATOR_MONITOR_LOOP.sh  ORCHESTRATOR_SESSION_2026-01-28.md  ORCHESTRATOR_SESSION_ACTIVE.md  ORCHESTRATOR_TODO_SYSTEM.md  PROJECT_AUDIT_2026-02-03.md  RALPH_REPORT_AMP.md  (+13 more)
agents_library/: apex-workflow.md
data/: positions.db  trade_log.csv
docs/: CODE_REVIEW_REPORT.md  MARKET_ORDER_SLTP_REVIEW.md  OAUTH_PRODUCTION.md  PRICE_SUBSCRIPTION_REVIEW.md  strategy_analysis.md  strategy_improvements.md
hf/: pyvenv.cfg
orchestratoragent/: AGENT_RESPONSES.md  AMP_TASK.md  AMP_TASKS.md  AMP_TASK_004.md  AMP_TASK_PROD_001_REPORT.md  AMP_TASK_PROD_003_REPORT.md  AMP_TASK_SEC_001_REPORT.md  ANTIGRAVITY_COMPLEX_TASKS.md  ANTIGRAVITY_TASK.md  ANTIGRAVITY_TASK_PO014.md  AUTONOMOUS_WORKFLOW.md  CODEX_RESPONSE.md  CODEX_TASK.md  CODEX_TASK_PO012.md  FINAL_STATUS_REPORT.md  HANDOFF_TO_AMP.md  NEXT_TASKS.md  ORCHESTRATION_FINALE.md  ORCHESTRATION_SESSION_FINAL.md  ORCHESTRATION_STATUS_FINAL.md  README-v2.md  READY_TO_EXECUTE.md  REALTIME_STATUS.md  STATUS.md  SURVEILLANCE_REPORT_1.md  TASK_OPT_001_APEX.md  TASK_OPT_002_FULLSTACK.md  TASK_OPT_003_CODEX.md  TASK_PROD_001_APEX.md  TASK_PROD_002_CODEX.md  TASK_SEC_001_ANTIGRAVITY.md  TASK_SEC_002_BACKEND.md  TMUX_ORCHESTRATION_GUIDE.md  TODO_MASTER.md  auto_retry.sh  autonomous_monitor.sh  launch_antigravity.sh  launch_codex.sh  run_antigravity.sh  start-orchestration-v2.sh  (+2 more)
orchestratoragent/config/: orchestration.conf  task_queue.json
orchestratoragent/docs/: ORCHESTRATION_GUIDE.md  ORCHESTRATOR_TEMPLATE.md  PROBLEMS_AND_SOLUTIONS.md
orchestratoragent/handoff/: TEMPLATE.md
orchestratoragent/prompts/: amp-orchestrator.md  amp-worker-v2.md  antigravity-worker-v2.md  claude-orchestrator-v2.md  codex-worker-v2.md
orchestratoragent/scripts/: autonomous_quota_monitor.sh  check_claude_quota.sh  check_claude_tokens.sh  dispatch-tasks.sh  monitor-agents.sh  quick_quota_capture.sh  quota_monitor.sh  quota_watchdog.sh  send-initial-tasks.sh
orchestratoragent/skills/: ORCHESTRATION_COMPLETE.md
proto/: README.md  ctrader.proto
src/: bot.rs  config.rs  error.rs  lib.rs  main.rs
src/modules/: mod.rs
src/modules/monitoring/: dashboard.rs  (+5 more)
tasks/: README.md
tasks/ctrader-reconnect-backoff/: 01_analysis.md  02_plan.md  03_implementation_log.md
tasks/deployment-runbook/: 01_analysis.md  02_plan.md  03_implementation_log.md
tasks/immediate-test-trade-auth-fail/: 01_analysis.md  02_plan.md  03_implementation_log.md
tasks/prometheus-metrics/: 01_analysis.md  02_plan.md  03_implementation_log.md
tasks/security-hardening/: 01_analysis.md  02_plan.md
tasks/sqlite-trade-audit/: 01_analysis.md  02_plan.md  03_implementation_log.md
tasks/wire-rate-limiters/: 01_analysis.md  02_plan.md  03_implementation_log.md
tests/: bot_integration_test.rs  bot_startup_test.rs  circuit_breaker_test.rs  circuit_breakers_live_test.rs  circuit_breakers_stress_test.rs  circuit_breakers_test.rs  ctrader_connection_test.rs  dry_run_integration_test.rs  integration.rs  integration_full_stack_test.rs  integration_test.rs  oauth_integration_test.rs  oauth_test.rs  position_reconciliation_test.rs  tls_verification_test.rs
(+27 files in other folders)
